big heading added

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head> 
-    <title>Evolve Capital/title>
-
+    <title>Evolve Capital </title>
 </head>
 
 <body>
+    <H1>
 
+        Big Heading for my website
+    </H1>
 
 </body>
 </html>
