img folder and file added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <H1>
 
-        Big Heading for my website
+        Your investment Club 
     </H1>
+<img src="img/Evolve_Capital.jpg">
 
 </body>
 </html>
